# slinky

./: .gitignore  Cargo.toml  PKGBUILD  build.rs
src/: cli.rs  lib.rs  main.rs
tests/: cli_tests.rs  dry_run_tests.rs  slinky_ln_tests.rs  slinky_tests.rs
tests/common/: mod.rs
