[package]
name = "slinky"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
colored = "2.1"
anyhow = "1.0"
pathdiff = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3"
